Tela de cadastro de filme finalizada

--- a/sistema-de-controle-academico/src/main/java/deltamike/scoa/view/biblioteca/BibliotecaDashboard.form
+++ b/sistema-de-controle-academico/src/main/java/deltamike/scoa/view/biblioteca/BibliotecaDashboard.form
@@ -29,6 +29,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Filme"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CadastrarFilmeItemActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="CadastrarRevistaItem">
               <Properties>
