--- a/sistema-de-controle-academico/src/main/java/deltamike/scoa/view/Dashboard.form
+++ b/sistema-de-controle-academico/src/main/java/deltamike/scoa/view/Dashboard.form
@@ -108,6 +108,9 @@
           <Dimension value="[72, 50]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UsuarioButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
