--- a/sistema-de-controle-academico/src/main/java/deltamike/scoa/view/Dashboard.form
+++ b/sistema-de-controle-academico/src/main/java/deltamike/scoa/view/Dashboard.form
@@ -100,6 +100,9 @@
           <Dimension value="[85, 50]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="FinanceiroButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="UsuarioButton">
       <Properties>
